--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Cuestionario de Data Warehouse</h1>
+  <h1>Cuestionario del Data Warehouse</h1>
   <div id="quiz"></div>
   <script>
    const questions = [
